[gd_scene load_steps=14 format=2]

[ext_resource path="res://effects/splash1.wav" type="AudioStream" id=1]
[ext_resource path="res://effects/splash2.wav" type="AudioStream" id=2]
[ext_resource path="res://effects/shader_base.png" type="Texture" id=3]
[ext_resource path="res://effects/water/Water.tscn" type="PackedScene" id=4]
[ext_resource path="res://effects/grid/Grid.tscn" type="PackedScene" id=5]
[ext_resource path="res://ship/Ship.tscn" type="PackedScene" id=6]
[ext_resource path="res://tilesets/number/NumberTileset.tscn" type="PackedScene" id=7]
[ext_resource path="res://tilesets/fog_of_war/FogOfWar.tscn" type="PackedScene" id=8]
[ext_resource path="res://ship/Target.tscn" type="PackedScene" id=9]
[ext_resource path="res://target_guide.gd" type="Script" id=10]
[ext_resource path="res://levels/world.gd" type="Script" id=11]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 1 )
random_pitch = 2.0

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 2 )
random_pitch = 2.0

[node name="World" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 11 )

[node name="target_guide" type="Node2D" parent="."]
position = Vector2( 36, 0 )
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Water" parent="." instance=ExtResource( 4 )]
scale = Vector2( 320, 180 )
centered = true

[node name="NumberTileset" parent="." instance=ExtResource( 7 )]
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
tile_data = PoolIntArray( -131067, 0, 0, -6, 0, 0, 327698, 0, 0 )

[node name="FogOfWar" parent="." instance=ExtResource( 8 )]
cell_size = Vector2( 16, 16 )
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65531, 0, 0, 1, 0, 0, 65537, 0, 0 )

[node name="Grid" parent="." instance=ExtResource( 5 )]
scale = Vector2( 320, 180 )
centered = true

[node name="Ship" parent="." instance=ExtResource( 6 )]

[node name="camera_guide" type="RemoteTransform2D" parent="Ship"]
remote_path = NodePath("../../Camera2D")

[node name="target_guide_guide" type="RemoteTransform2D" parent="Ship"]
position = Vector2( 36, 0 )
remote_path = NodePath("../../target_guide")

[node name="Target" parent="." instance=ExtResource( 9 )]
position = Vector2( 36, 0 )
frame = 1

[node name="audio" type="Node" parent="."]

[node name="splash1" type="AudioStreamPlayer2D" parent="audio"]
stream = SubResource( 1 )

[node name="splash2" type="AudioStreamPlayer2D" parent="audio"]
stream = SubResource( 2 )

[node name="ExplodingTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="WhiteTransition" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 320, 180 )
texture = ExtResource( 3 )
[connection signal="item_rect_changed" from="Camera2D" to="Water" method="move"]
[connection signal="timeout" from="ExplodingTimer" to="." method="_ExplodingTimer"]
